 cnp-deny-malware-tntbotinger-communication-buvgnj9.yaml
---
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: "cnp-deny-malware-tntbotinger-communication"-b11a7xm
  namespace: default
spec:
  description: "Policy to deny tntbotinger communication over port 6697, 51982 and 1982"
  endpointSelector:
    matchLabels:
      release: jupyter-hub
      app: jupyterhub
      component: continuous-image-puller
      controller-revision-hash: 56bc99b8f5
      pod-template-generation: 1
